[style] prevent annoying layout shifting"

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,7 @@
 body {
 	background-color: white;
 }
+
+html {
+	overflow-y: scroll;
+}
